feat: add change password endpoint