@@ -2,8 +2,10 @@ package com.chubb.FlightBookingSystem.security;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.chubb.FlightBookingSystem.model.Role;
@@ -35,8 +37,9 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(user.getRole().name()));
     }
+
 
     @Override
     public boolean isAccountNonExpired() { return true; }
